Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9279

Smart installer wrapper package file broken by addition of multilanguage support

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.3
    • 4.6.2
    • None
    • None
    • a2f2c87f320873d1968d931ad69a0f640c5545b1

    Description

      If multi-language support is added to an application installation, the languages line is copied to both the application package and the installer package, while the package header is defined separately for the application package and the installer package.

      Unfortunately the installer header ends up looking like this:

      #

      {"MyApp-Installer-EN", "MyApp-Installer-FR", "MyApp-Installer-ZU"}

      ,(0x12345678),1,2,3

      ; Manual PKG pre-rules from PRO files
      &EN,FR,ZU(1024)

      This breaks makesis, which requires the language line be above the package header.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            hamishwillee Hamish Willee
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes