Made it possible to define more than one language using pkg_prerules

The pkg statements were generated in invalid order if user used
pkg_prerules to redefine languages supported by the pkg file.

Also made it possible to override dependency statements autogenerated
for Qt and QtWebkit, as these statements need to be user defined in
case of multiple languages.

Defining the following in .pro removes all dependencies from pkg rules:

default_deployment.pkg_prerules -= \
    pkg_depends_webkit \
    pkg_depends_qt \
    pkg_platform_dependencies

Task-number: QTBUG-9279
Reviewed-by: Janne Anttila