src/corelib/corelib.pro
@@ -38,7 +38,6 @@ symbian: {
 
     # Partial upgrade SIS file
     vendorinfo = \
-        "&EN" \
         "; Localised Vendor name" \
         "%{\"Nokia, Qt\"}" \
         " " \
