src/gui/gui.pro
@@ -60,7 +60,6 @@ symbian: {
 
     # Partial upgrade SIS file
     vendorinfo = \
-        "&EN" \
         "; Localised Vendor name" \
         "%{\"Nokia, Qt\"}" \
         " " \
